Fix alignment issue on home page

--- a/style.css
+++ b/style.css
@@ -220,7 +220,9 @@ a:hover, a:active {
   text-align: right;
 }
 
-
+.widget-home-tutorials .hero-description {
+    margin-left: auto;
+}
 /* End Tutorials banner */
 /* End hero banners */
 
